- Code cleaning